--- a/xsnakeDao/pom.xml
+++ b/xsnakeDao/pom.xml
@@ -2,11 +2,45 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.xsnake.cloud</groupId>
-	<artifactId>xsnakeDao</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>dao</artifactId>
+	<version>1.0.0</version>
 
 	<name>xsnakeDao</name>
 	<url>http://maven.apache.org</url>
+
+
+	<organization>
+		<name>xsnake</name>
+		<url>http://www.xsnake.org</url>
+	</organization>
+
+	<issueManagement>
+		<system>Github Issue</system>
+		<url>https://github.com/mousejerry1220/xsnakeDao/issues</url>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git@github.com:mousejerry1220/xsnakeDao.git</connection>
+		<developerConnection>scm:git:git@github.com:mousejerry1220/xsnakeDao.git</developerConnection>
+		<url>git@github.com:mousejerry1220/xsnakeDao.git</url>
+    	<tag>xsnakeDao-1.0.0</tag>
+  	</scm>
+
+	<developers>
+		<developer>
+			<id>mousejerry1220</id>
+			<name>Jerry.Zhao</name>
+			<email>mousejerry1220@gmail.com</email>
+			<timezone>+8</timezone>
+		</developer>
+	</developers>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -24,7 +58,7 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -70,5 +104,69 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+				</snapshotRepository>
+				<repository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<!-- Source -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.4</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- Javadoc -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.3</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- Gpg Signature -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
